--- a/index1.html
+++ b/index1.html
@@ -30,9 +30,10 @@
                     <p>Nullam a lorem quis ex pellentesque eleifend nec quis ex. Ut mollis tellus turpis, 
                         eget volutpat velit auctor pharetra.</p>
                 </div><!-- chamada1 --->
+
             </div><!-- container--->
         </header>
-        <div class="clear"></div><!-- limpeza --->
+        <div class="clear"></div>
 
     <section class="sessao1">
         <div class="container">
@@ -49,14 +50,10 @@
                 <div class="btn1-texto">Entre em contato</div>
             </div><!-- texto sessao1 --->
             <div class="img-sessao1">
-                <img src="img/tudo2.png" width="350px" height="280px">
-            </div><!-- img sessao1 --->
-
-
-        </div>
+                
+            </div><!-- img sessao1<img src="img/cel1.png"> --->
+        </div><!-- container--->
     </section>
-
-
 
     </body>
 </html>
